--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "For testing cliq url invoke type extensions",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "node index.js"
   },
   "author": "navaneethakrishnan.sm",
